Update August 20, 2023 - 2:19pm

--- a/index.html
+++ b/index.html
@@ -315,8 +315,10 @@
                 <div class="section-title">
                     <h2>Portfolio</h2>
                     <p>Here are some of my Works in my Github repository you can check with.</p>
-                    <p>just visit: https://github.com/lightdarkmaster
-                        <a href="http://github.com/" https://github.com/lightdarkmaster.</p>
+                    <p>
+                        <a href="https://github.com/lightdarkmaster"> just visit: https://github.com/lightdarkmaster</a>
+
+                    </p>
                 </div>
 
                 <div class="row" data-aos="fade-up">
@@ -347,7 +349,7 @@
                             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                <a href="https://chan-valorant.netlify.app/" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -367,7 +369,7 @@
                             <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                <a href="https://chan-coffee.netlify.app/" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -387,7 +389,7 @@
                             <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                <a href="https://chan-icewatercom.netlify.app/" title="More Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
