Change Description (A Programmer)

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
             <h1>Christian Barbosa</h1>
-            <p>I'm <span class="typed" data-typed-items="a Web Designer, a Developer, a Gamer,a Photographer"></span></p>
+            <p>I'm <span class="typed" data-typed-items="a Web Designer, Web Developer, a Programmer, a Photographer"></span></p>
         </div>
     </section>
     <!-- End Hero -->
